plugins/kotlin/idea/tests/testData/multiplatform/expectActualLineMarkers/iosX64/leaf3.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>ActualizedInSharedAndLeaf<!>

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>ActualizedInLeaves<!>
